# appnotworking

./: .gitignore  local.properties
app/: build.gradle
app/src/main/cpp/: CMakeLists.txt
